# MA-TODO-APP

./: .gitignore  .mcp.json  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUTH_504_FIX_SUMMARY.md  AUTH_FIX_DEPLOYED.md  AUTH_TOKEN_FINAL_FIX.md  AUTH_TOKEN_ISSUE_ANALYSIS.md  AUTOMATION_SKILLS_GUIDE.md  BACKEND_RAILWAY_DEPLOYMENT.md  BROWSER_DEBUG_STEPS.md  BROWSER_TEST_REPORT.md  CHECK_SERVICE_WORKER.md  CLAUDE.md  COMPLETE_SUMMARY_AND_NEXT_STEPS.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_500_ERROR_FIXED.md  CRITICAL_ARCHITECTURE_ISSUE_FOUND.md  CRITICAL_AUTH_URL_BUG.md  CRITICAL_FIX_SESSION_VALIDATION.md  DEBUG_LOGIN_NETWORK.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_DEBUG_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_SUCCESS_REPORT.md  FINAL_AUTHENTICATION_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_TEST_REPORT.md  HACKATHON_FINAL_COMPLETION_REPORT.md  HACKATHON_II_AUDIT_REPORT_FINAL.md  HACKATHON_STATUS.md  LOCAL_SETUP_GUIDE.md  PHASE_2_READY.md  PLAYWRIGHT_TEST_REPORT.md  QUICK_NETWORK_CHECK.md  QUICK_REFERENCE_CHEAT_SHEET.md  RAILWAY_FIX_SUMMARY.md  (+18 more)
phase-2/backend/: .dockerignore  .env.example  .railway-redeploy  .railway-service.json  .replit  CLAUDE.md  Dockerfile  Dockerfile.backup  EVENT_PUBLISHING_INTEGRATION.md  FIX_VENV.ps1  MIGRATIONS.md  MIGRATIONS_SUMMARY.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  README.md  RUN_BACKEND.bat  RUN_BACKEND.ps1  START_BACKEND.sh  alembic.ini  backend-audit-report-after-fix.txt  backend-audit-report.json  backend-audit-report.txt  check_latest_session.py  check_new_session.py  check_session_table.py  check_specific_session.py  inspect_session_table.py  load_test.py  pyproject.toml  pytest.ini  railway.toml  replit.nix  requirements.txt  start_backend.bat  (+2 more)
(+501 files in other folders)
