[project]
name = "talal-tda-workspace"
version = "1.0.0"
description = "Monorepo workspace for multi-phase Todo App (Phases I-V)"
requires-python = ">=3.13"
dependencies = []

# Workspace configuration disabled to prevent root .venv creation
# Each project (phase-1, phase-2/backend) uses its own local .venv
# [tool.uv.workspace]
# members = [
#     "phase-1",
#     "phase-2/backend",
#     # Future phases:
#     # "phase-3/chatbot",
#     # "phase-4/analytics",
# ]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["phase-1/tests", "phase-2/backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
